# xhdfe-xfe

./: .gitignore  CITATION.cff  CMakeLists.txt  COMPILATION_NOTES.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASE_NOTES_2.16.0.20260710.md  RELEASE_NOTES_2.16.1.20260710.md  RELEASE_NOTES_2.17.0.20260710.md  RELEASE_NOTES_2.17.1.20260710.md  RELEASE_NOTES_2.18.0.20260711.md  RELEASE_NOTES_2.18.1.20260711.md  RELEASE_NOTES_2.18.2.20260715.md  RELEASE_NOTES_2.19.0.20260720.md  RELEASE_NOTES_2.20.0.20260723.md  VALIDATE_AKM_KSS.py  VALIDATE_GELBACH.py  VALIDATE_GELBACH_ADVERSARIAL.py  VALIDATE_GELBACH_FRONTENDS.py  VALIDATE_GELBACH_HELP.py  XHDFEAKM_AUDITORIA_ADVERSARIAL_CODEX_20260710.md  XHDFEGELBACH_CODEX_POSTAUDIT_REMEDIATION_REPORT_20260723.md  XHDFEGELBACH_EMPIRICAL_APPLICATION_COVERAGE_20260720.md  pyproject.toml  setup.py
.github/scripts/: make_stata_bundle.sh
.github/workflows/: build.yml  release.yml
Remediation/xhdfegelbach_postaudit_20260723/: MC_BASE_SHARE_COVERAGE_DIAGNOSIS.md  RCPP_OFFLINE_SOURCE_VALIDATION.md  RCPP_PROVENANCE.md  R_INTEGRATION_EVIDENCE.md  r_gpu_gelbach_smoke.R
Remediation/xhdfegelbach_postaudit_20260723/baseline/: standard_path.pkl
Remediation/xhdfegelbach_postaudit_20260723/evidence/: absorbed_share_coverage_final.json  base_share_coverage_final.json
Remediation/xhdfegelbach_postaudit_20260723/performance_30pct_20260723/: cpu_pooled_complete_runs.json
Remediation/xhdfegelbach_postaudit_20260723/performance_30pct_20260723/cpu5_retry2/: summary.json
Remediation/xhdfegelbach_postaudit_20260723/performance_30pct_20260723/cpu8_confirmatory/: artifact_manifest.json  summary.json
Remediation/xhdfegelbach_postaudit_20260723/performance_30pct_20260723/cuda8_confirmatory/: summary.json
Remediation/xhdfegelbach_postaudit_20260723/repros/: f01_near_fe_band_mc.json  f01_near_fe_band_mc.py  performance_ab_30pct.py  release_bundle_which.do
Remediation/xhdfegelbach_postaudit_20260723/repros/ws4/oracles/: absorbed_share_coverage.json  gelbach_oracle.py  (+10 more)
benchmarks/: xhdfegelbach_absorbed_target_cpu_gpu_smoke.do
benchmarks/akm_kss/: stata_akm_bounded_nonconvergence_notes_smoke.do
docs/: akm-kss.md  comparison.md  gpu.md  overview.md  quickstart.md  release-workflow.md
examples/: README.md  akm_kss_example.R  akm_kss_example.do  akm_kss_example.py  gelbach_absorbed_target.R  gelbach_absorbed_target.do  gelbach_absorbed_target.py  gelbach_example.R  gelbach_example.do  gelbach_example.py
include/: iv.hpp  ols.hpp
include/hdfe/: akm_kss_cuda.hpp  compiler_compat.hpp  hdfe_regressor.hpp
python/: py_hdfe_v11.cpp
r/: README.md
r/examples/: xhdfe_r_showcase.qmd
r/tools/: gen_parity_data.R  gen_parity_fixture.py  refresh_r_core.sh
r/xhdfe/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE
r/xhdfe/R/: RcppExports.R  akm.R  demean.R  docs.R  estimate.R  fixef.R  gelbach.R  groupfes.R  info.R  methods.R  predict.R  utils.R  xhdfe.R  xhdfe_fit.R
r/xhdfe/inst/: COPYRIGHTS
r/xhdfe/man/: fixef.xhdfe.Rd  predict.xhdfe.Rd  xhdfe-methods.Rd  xhdfe-package.Rd  xhdfe.Rd  xhdfe_akm_kss.Rd  xhdfe_akm_leave_out_set.Rd  xhdfe_demean.Rd  xhdfe_fit.Rd  xhdfe_gelbach.Rd  xhdfe_gelbach_contrast.Rd  xhdfe_gelbach_tidy.Rd  xhdfe_group_fes.Rd  xhdfe_info.Rd
r/xhdfe/src/: Makevars  Makevars.win  RcppExports.cpp  akm_kss.cpp  akm_kss_cuda.cu  fe_absorption_cuda.cu  fe_absorption_cuda.hpp  hdfe_regressor_v11.cpp  ols.cpp  rcpp_xhdfe.cpp
r/xhdfe/tests/: testthat.R
r/xhdfe/tests/testthat/: helper-parity.R  test-akm.R  test-gelbach.R  test-interface.R  test-parity-python.R  test-regressions.R
share/xhdfe_estimation_cpp/include/: ols.hpp
share/xhdfe_estimation_cpp/include/hdfe/: akm_kss.hpp  akm_kss_am_tabulation.hpp  hdfe_regressor.hpp
share/xhdfe_estimation_cpp/src/: akm_kss.cpp  fe_absorption_metal.hpp
share/xhdfe_estimation_cpp/stata/: xhdfe.ado  xhdfe.sthlp
share/xhdfe_estimation_cpp/stata/include/: fe_absorption.hpp
share/xhdfe_estimation_cpp/stata/src/: fe_absorption.cpp  fe_absorption_metal.mm  schwarz_demean.cpp  xfe_plugin.cpp  xhdfe_plugin.cpp
src/: akm_kss.cpp  akm_kss_cuda.cu  fe_absorption.cpp  hdfe_regressor_v11.cpp  iv.cpp  schwarz_demean.cpp
stata/: BUILD_CUDA.md  README.md  README.txt  stata.toc  xfe.ado  xfe.linux64.plugin  xfe.macos-universal.plugin  xfe.pkg  xfe.sthlp  xfe.win64.plugin  xhdfe.ado  xhdfe.linux64.plugin  xhdfe.macos-universal.plugin  xhdfe.pkg  xhdfe.sthlp  xhdfe.win64.plugin  xhdfe_estat.ado  xhdfe_hetero.ado  xhdfe_hetero.sthlp  xhdfe_p.ado  xhdfeakm.ado  xhdfeakm.sthlp  xhdfeconnected.ado  xhdfeconnected.sthlp  xhdfegelbach.ado  xhdfegelbach.sthlp  xhdfegpu.ado  xhdfegpu.sthlp
stata/example/: 2.Detailed_Comparision_xhdfe_reghdfe.do  3.Check_Options_reghdfe_xhdfe.do  felsdvsimul.parquet
stata/example/data/: reghdfe_fes.dta  xhdfe_fes.dta
stata/include/: iv.hpp  schwarz_demean.hpp
stata/include/hdfe/: akm_kss.hpp
stata/src/: akm_kss.cpp  akm_kss_cuda.cu  fe_absorption.cpp  hdfe_regressor_v11.cpp  iv.cpp  xhdfe_plugin.cpp
stata/tools/: build-plugin.sh  build-plugin_mac_m1_rename_build-plugin.sh  build-xfe-plugin.sh  cuda-common.sh  mingw_stdio_shim.h
tests/benchmarks/: README.md  generate_pyfixest_data.py  get_sergio_data.sh  registry.json  run_python.py  run_r.R  run_stata.do  simulate_panel.py
tests/stata/: README.md  _helpers.do  run_stata_tests.sh  testall.do
tests/stata/part1/: cluster.do  collinearity.do  companions.do  dof-ssc.do  estat.do  factor-vars.do  group-individual.do  heterogeneous-slopes.do  iv.do  methods.do  multiway-cluster.do  multiway-fe.do  noabsorb.do  noconstant.do  nosample.do  options.do  postestimation.do  predict.do  robust.do  sample-missing.do  savefe-alias.do  savefes.do  string-interactions.do  unadjusted.do  weights-extended.do  weights.do
tools/: check_cpp_core_alignment.sh  make_source_dist_zip.sh  stage_stata_netinstall_site.sh  validate_source_dist_zip.sh  validate_stata_package_site.sh
xhdfe/: __init__.py  __main__.py  _help.py  _version.py  akm.py  gelbach.py
xhdfe/help/: __init__.py  gelbach.md  xhdfe.md
(+132 files in other folders)
