[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xhdfe"
version = "2.11.0.20260704"
description = "High-dimensional fixed effects regression backed by the xhdfe C++ core"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Miguel Portela", email = "miguel.portela@eeg.uminho.pt" },
  { name = "Tiago Tavares", email = "tgstavares@eeg.uminho.pt" }
]
maintainers = [
  { name = "Miguel Portela", email = "miguel.portela@eeg.uminho.pt" }
]
keywords = ["econometrics", "fixed effects", "HDFE", "regression", "reghdfe"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.23",
]

[project.urls]
Homepage = "https://github.com/reisportela/xhdfe-xfe"
Repository = "https://github.com/reisportela/xhdfe-xfe"
Issues = "https://github.com/reisportela/xhdfe-xfe/issues"

[project.scripts]
xhdfe-help = "xhdfe._help:main"

[tool.setuptools]
include-package-data = true
py-modules = ["py_hdfe_v11"]

[tool.setuptools.packages.find]
where = ["."]
include = ["xhdfe*"]

[tool.setuptools.package-data]
xhdfe = ["py.typed", "help/*.md"]
